fix hover on collapse expanded only

--- a/src/style/scss/global.scss
+++ b/src/style/scss/global.scss
@@ -13,11 +13,25 @@
         display: none;
     }
 
-    .object-key-val {
+    .object-key-val.collapsed {
         &:hover > span > .object-meta-data {
-            //& > .copy-to-clipboard-container {
-            //    display: inline-block;
-            //}
+            & > .copy-to-clipboard-container {
+                display: inline-block;
+            }
+            & > .click-to-add {
+                display: inline-block;
+            }
+            & > .click-to-remove {
+                display: inline-block;
+            }
+        }
+    }
+
+    .object-key-val.expanded {
+        > span:hover > .object-meta-data {
+            & > .copy-to-clipboard-container {
+                display: inline-block;
+            }
             & > .click-to-add {
                 display: inline-block;
             }
